--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <link
       rel="shortcut icon"
-      href="/assets/img/favicon-img.png"
+      href="/assets/favicon-img.png"
       type="image/x-icon"
     />
 
