--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <div class="product__container grid">
           <article class="product__card">
-            <a href="/Product/product.html">
+            <a href="/product.html">
               <img
                 src="/assets/Home1.jpg"
                 alt=""
