--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/CSS/product.css">
+  <link rel="stylesheet" href="/css/product.css">
 
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -65,7 +65,7 @@
       <div class="slideshow-container">
 
         <div class="mySlides fade">
-          <img src="/assets/product 1.jpg" style="width:100%">
+          <img src="/assets/homee1.jpg" style="width:100%">
         </div>
         
         <div class="mySlides fade">
@@ -211,6 +211,6 @@
 </main>
 
 
-<script src="/JS/product.js"></script>
+<script src="/js/product.js"></script>
 </body>
 </html>
