--- a/product.html
+++ b/product.html
@@ -102,10 +102,10 @@
           <span class="rating">4.5</span>      
         </div>
         <h1 class="home__title">
-          New Apartment
+          2 BHK Apartment
         </h1>
         <h2 class="product__prize">
-          59000.00
+          46.88L
         </h2>
         <p class="home__description">
           This property is managed by Beztak, 2022 recipient of the US Best Managed Companies for the third year in a row, sponsored by Deloitte Private and The Wall Street Journal. Call and let us tell you why! ENJOY THE LIFE OF LUXURY Located in Chicago, Illinois The Residences at NewCity offers studio, one-, and two- bedroom apartments and features a door attendant, covered parking, swimming pool with expansive sundeck, bike racks, BBQ/picnic area, and more!With convenient access to shopping, dining, and entertainment, The Residences at NewCity is the perfect place to call your new home! Virtual and Contact-Free Leasing and Move-In Available - Self-Guided Tours with Lockboxes- FaceTime/Skype Tours- Apply & Sign Online
