--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="/css/product.css">
+  <link rel="stylesheet" href="/product.css">
 
   <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
@@ -211,6 +211,6 @@
 </main>
 
 
-<script src="/js/product.js"></script>
+<script src="/product.js"></script>
 </body>
 </html>
