link update sell

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               over 1 million+ homes for sale available on the website, we can
               match you with a house you will want to call home.
             </p>
-            <a href="/sell.html">
+            <a href="#sell">
               <button class="button--flex service__button">
                 Sell Home<i class="ri-arrow-right-line button__icon"></i>
               </button>
@@ -316,7 +316,7 @@
       </section>
     </main>
 
-    <section class="container">
+    <section class="container" id="sell">
       <div>
         <table>
           <tr>
